# banjax

./: *shell*  .cproject  .gitignore  .project  CHANGELOG.md  CMakeLists.txt  Makefile  Makefile.am  Makefile.old  README.md  autogen.sh  captcha.sh  circle.yml  configure  configure.ac  configure.scan  configuredebug.sh  libre2.pc  libtool  libyaml-cpp.pc  ubuntu-install.sh
.circleci/: config.yml
autom4te.cache/: output.0  requests  traces.0
challenger/: solver.html
config/: auth.html  banjax-with-kafka.conf  banjax.conf  banjax.conf.challenger-auth  banjax.conf.challenger-inv-sha  banjax.conf.sample  banjax.conf_multi_domain_challenge  captcha-decomp.html  captcha.html  captcha.min.html  mock_auth.html  solver.html
config-aux/: banjax.conf.sample
config/banjax.d/: deflect.ca.conf  equalit.ie.conf
config/html/: captcha.html
debian/: banjax.substvars  changelog  control  copyright  files  rules
doc/: INSTALL.txt  ObjectStructure.txt  ats_learn2ban_tasks.org  banjax.conf.README  how_to_write_filter.txt  log_processor_integration_report.txt
etc/: ban_from_file.sh
gtest/: Makefile.am  Makefile.am.not_working  Makefile.am.original  config.status  configure
include/: ats_event_handler.h  banjax.h  banjax_common.h  banjax_continuation.h  banjax_continuation.h.orig  banjax_filter.h  bot_sniffer.h  challenge_manager.h  cookie_parser.h  cookiehash.h  db_tools.h  denialator.h  exception.h  filter_list.h  gtest  ip_database.h  log_processor_interface.h  logentry.h  regex_manager.h  response_generator.h  swabber_interface.h  transaction_muncher.h  unittest_common.h  util.h  white_lister.h
src/: Makefile.am  ats_event_handler.cpp  ats_event_handler.cpp.orig  ats_event_handler.h  banjax.cpp  banjax.h  banjax_continuation.cpp  banjax_continuation.h  banjax_filter.h  banjax_interface.h  base64.cpp  base64.h  bot_sniffer.cpp  bot_sniffer.h  challenge_manager.cpp  challenge_manager.h  challenger.cpp  challenger.h  cookie.cpp  cookie.h  cookie_parser.cpp  cookie_parser.h  cookiehash.cpp  cookiehash.h  db_tools.cpp  default.h  defer.h  denialator.cpp  denialator.h  exception.h  filter_list.h  get-length-fix.patch  global_white_list.h  ip_database.cpp  ip_database.h  ip_db.h  kafka.cpp  kafka.h  libcaptcha.c  log_processor_interface.cpp  (+17 more)
src/processor/: BotBangerAggregator.cpp  BotBangerAggregrator.h  BotBangerLogger.h  BotBangerModelListener.h  ConcurrentFifo.h  Feature.h  FeatureAveragePayloadSize.cpp  FeatureAveragePayloadSize.h  FeatureAverageTimeBetweenRequests.cpp  FeatureAverageTimeBetweenRequests.h  FeatureContainer.h  FeatureCyclingUserAgent.cpp  FeatureCyclingUserAgent.h  FeatureHTTPStatusRatio.cpp  FeatureHTTPStatusRatio.h  FeatureHtmlToImageRatio.cpp  FeatureHtmlToImageRatio.h  FeaturePercentageConsecutiveRequests.cpp  FeaturePercentageConsecutiveRequests.h  FeatureRequestDepth.cpp  FeatureRequestDepth.h  FeatureRequestDepthStd.cpp  FeatureRequestDepthStd.h  FeatureSessionLength.cpp  FeatureSessionLength.h  FeatureStdDevData.h  FeatureVarianceRequestInterval.cpp  FeatureVarianceRequestInterval.h  HostHitMissActions.h  HostHitMissAggregator.cpp  HostHitMissAggregator.h  HostHitMissDumper.h  HostHitMissFeature.cpp  HostHitMissFeature.h  LogAggregator.h  LogEntry.h  LogProcessor.conf  LogProcessorAction2Banjax.h  Main.cpp  Makefile.am  (+16 more)
src/processor/botbanger/: bot_banger_aggregator.cpp  bot_banger_aggregator.h  bot_banger_logger.h  bot_banger_model_listener.cpp  bot_banger_model_listener.h
src/processor/features/: feature.h  feature_average_payload_size.cpp  feature_average_payload_size.h  feature_average_payload_size_test.cpp  feature_average_time_between_requests.cpp  feature_average_time_between_requests.h  feature_container.h  feature_cycling_user_agent.cpp  feature_cycling_user_agent.h  feature_html_to_image_ratio.cpp  feature_html_to_image_ratio.h  feature_http_status_ratio.cpp  feature_http_status_ratio.h  feature_percentage_consecutive_requests.cpp  feature_percentage_consecutive_requests.h  feature_request_depth.cpp  feature_request_depth.h  feature_request_depth_std.cpp  feature_request_depth_std.h  feature_session_length.cpp  feature_session_length.h  feature_variance_request_interval.cpp  feature_variance_request_interval.h
src/processor/hashfunctions/: crc32.cpp
src/processor/hosthitmiss/: host_hit_miss_actions.cpp  host_hit_miss_actions.h  host_hit_miss_aggregator.cpp  host_hit_miss_aggregator.h  host_hit_miss_dumper.h  host_hit_miss_feature.cpp  host_hit_miss_feature.h
src/processor/svm/: svm.cpp
src/processor/test/: bot_banger_aggregator_test.cpp  bot_banger_model_listener_test.cpp  feature_average_payload_size_test.cpp  feature_average_time_between_requests_test.cpp  feature_container_test.h  feature_cycling_user_agent_test.cpp  feature_html_to_image_ratio_test.cpp  feature_http_status_ratio_test.cpp  feature_percentage_consecutive_requests_test.cpp  feature_request_depth_std_test.cpp  feature_request_depth_test.cpp  feature_session_length_test.cpp  feature_set_value.h  feature_variance_request_interval_test.cpp  host_hit_miss_actions_test.cpp  host_hit_miss_aggregator_test.cpp  log_entry_test.h  std_dev_test.cpp
src/processor/utils/: concurrent_fifo.h  std_dev.h  timegm.cpp  timegm.h
src/processor/utils/hashfunctions/: crc32.h
src/trash/: ats_cont.cpp  regex_ban.cpp
src/utils/: string_dumper.h  string_utils.cpp  strptime.h
src/utils/svm/: svm.cpp
test/: Makefile.am  auth_challenge_test.conf  b64_performance_test  b64encoder_speed_test.cpp  ban-logic.py  banjax_behavior_test.py  banjax_behavoir_test.py  banjax_unittest.cpp  banned_url_test.conf  base64_unittest.cpp  cached_page.html  captcha_test.py  challenge_manager_unittest.cpp  challenger_unittest.cpp  chmng_test  chmng_test.cpp  cookie_unittest.cpp  curl_attack.sh  kafka_unittest.cpp  mock_swabber.py  popen_test.py  regex_manager_unittest.cpp  regex_rate_test.py  test.html  test_regex.cpp  uncached_page.html  unittest_common.cpp  unittest_common.h  unittest_main.cpp  unittests  white_lister_unittest.cpp
test/libb64/base64/: base64
